Move remaining modules out of google.fhir, allowing that to become a Python namespace package.
PiperOrigin-RevId: 448346086

--- a/py/google/fhir/core/internal/BUILD
+++ b/py/google/fhir/core/internal/BUILD
@@ -59,9 +59,9 @@ py_library(
         ":primitive_time_utils",
         "@com_google_protobuf//:protobuf_python",
         "//py",
-        "//py/google/fhir:extensions",
-        "//py/google/fhir:fhir_errors",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core:extensions",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:testdata_utils",
         "//py/google/fhir/core/utils:path_utils",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
@@ -81,7 +81,7 @@ py_library(
         ":primitive_time_utils",
         "//py",
         "//proto/google/fhir/proto:annotations_py_pb2",
-        "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/core:fhir_errors",
         "//py/google/fhir/core/utils:annotation_utils",
         "//py/google/fhir/core/utils:fhir_types",
         "//py/google/fhir/core/utils:proto_utils",
