--- a/py/google/fhir/core/internal/json_format/BUILD
+++ b/py/google/fhir/core/internal/json_format/BUILD
@@ -23,8 +23,8 @@ py_library(
     srcs_version = "PY3",
     deps = [
         "//py",
-        "//py/google/fhir:extensions",
-        "//py/google/fhir:references",
+        "//py/google/fhir/core:extensions",
+        "//py/google/fhir/core:references",
         "//py/google/fhir/core/internal:primitive_handler",
         "//py/google/fhir/core/utils:annotation_utils",
         "//py/google/fhir/core/utils:fhir_types",
@@ -44,7 +44,7 @@ py_library(
     deps = [
         "@com_google_protobuf//:protobuf_python",
         "//py",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -60,15 +60,15 @@ py_test(
         "//py",
         "//proto/google/fhir/proto/r4:primitive_test_suite_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
-        "//py/google/fhir:extensions",
-        "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/core:extensions",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:protobuf_compare",
+        "//py/google/fhir/core/testing:testdata_utils",
         "//py/google/fhir/core/utils:annotation_utils",
         "//py/google/fhir/core/utils:fhir_types",
         "//py/google/fhir/core/utils:path_utils",
         "//py/google/fhir/core/utils:proto_utils",
         "//py/google/fhir/r4:json_format",
-        "//py/google/fhir/testing:protobuf_compare",
-        "//py/google/fhir/testing:testdata_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
