--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -215,10 +215,10 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:test_script_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:verification_result_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:vision_prescription_py_pb2",
-        "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/core:fhir_errors",
         "//py/google/fhir/core/internal/json_format:json_format_test",
         ":json_format",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core/testing:testdata_utils",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
@@ -243,9 +243,9 @@ py_test(
         "//proto/google/fhir/proto/r4/core:codes_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
-        "//py/google/fhir:codes",
-        "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/core:codes",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -269,8 +269,8 @@ py_test(
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//proto/google/fhir/proto/r4/core:extensions_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
-        "//py/google/fhir:extensions",
-        "//py/google/fhir:extensions_test",
+        "//py/google/fhir/core:extensions",
+        "//py/google/fhir/core:extensions_test",
         "//testdata/r4/profiles:test_extensions_py_pb2",
         requirement("absl-py"),
         requirement("six"),
@@ -307,7 +307,7 @@ py_test(
     deps = [
         "//py",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
-        "//py/google/fhir:references",
+        "//py/google/fhir/core:references",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
@@ -346,8 +346,8 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:encounter_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:observation_py_pb2",
-        "//py/google/fhir:fhir_errors",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
