--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -73,11 +73,9 @@ py_test(
         "//py",
         "//proto/google/fhir/proto/stu3:codes_py_pb2",
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
-        "//proto/google/fhir/proto/stu3:resources_py_pb2",
-        "//proto/google/fhir/proto/stu3:uscore_py_pb2",
-        "//py/google/fhir:codes",
-        "//py/google/fhir:fhir_errors",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core:codes",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -101,9 +99,8 @@ py_test(
         "//proto/google/fhir/proto/stu3:fhirproto_extensions_py_pb2",
         "//proto/google/fhir/proto/stu3:ml_extensions_py_pb2",
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
-        "//py/google/fhir:extensions",
-        "//py/google/fhir:extensions_test",
-        "//testdata/stu3/profiles:test_py_pb2",
+        "//py/google/fhir/core:extensions",
+        "//py/google/fhir/core:extensions_test",
         "//testdata/stu3/profiles:test_extensions_py_pb2",
         requirement("absl-py"),
         requirement("six"),
@@ -132,7 +129,7 @@ py_test(
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
         "//py/google/fhir/core/internal/json_format:json_format_test",
         ":json_format",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core/testing:testdata_utils",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
@@ -169,7 +166,7 @@ py_test(
     deps = [
         "//py",
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
-        "//py/google/fhir:references",
+        "//py/google/fhir/core:references",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
@@ -184,9 +181,9 @@ py_library(
     ],
     srcs_version = "PY3",
     deps = [
+        ":primitive_handler",
         "//py",
         "//py/google/fhir/core/internal:resource_validation",
-        "//py/google/fhir/stu3:primitive_handler",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -206,8 +203,8 @@ py_test(
         "@com_google_protobuf//:protobuf_python",
         "//py",
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
-        "//py/google/fhir:fhir_errors",
-        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/core:fhir_errors",
+        "//py/google/fhir/core/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
