Add FhirPackage::GetResource Interface
- Add a convenience method for retrieving a resource from any
  collection in the FhirPackage.

PiperOrigin-RevId: 449272313

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -543,6 +543,9 @@ cc_test(
         "//proto/google/fhir/proto:annotations_cc_proto",
         "//proto/google/fhir/proto:profile_config_cc_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
+        "//proto/google/fhir/proto/r4/core/resources:code_system_cc_proto",
+        "//proto/google/fhir/proto/r4/core/resources:search_parameter_cc_proto",
+        "//proto/google/fhir/proto/r4/core/resources:structure_definition_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:value_set_cc_proto",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings:str_format",
