--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -286,6 +286,7 @@ cc_library(
         ":json_util",
         ":proto_util",
         ":util",
+        "//cc/google/fhir:error_reporter",
         "//cc/google/fhir/json:fhir_json",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
@@ -477,6 +478,7 @@ cc_library(
         ":primitive_wrapper",
         ":proto_util",
         ":util",
+        "//cc/google/fhir:error_reporter",
         "//cc/google/fhir/json:fhir_json",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
