Separates out error handling and error reporting functionality into two separate classes.  The ErrorHandler interface has been converted into a stateless API (like a Java listener) that users implement can be passed by reference top top level APIs.  These APIs are passed the full context of the error report, including element path (e.g., "Patient.contact[2].name") and field path (e.g., "Patient.contact.name", without indices).
Once the ErrorHandler has been passed to top-level APIs, they're immediately wrapped in a separate class, ErrorReporter, which processes use to maintain scope (i.e., element path and field path).  Calling Report functions on the Reporter will then propagate the reported error along with the element and field paths to the associated handler.

Scopes themselves are maintained by ErrorScope objects, which enter scopes upon creation and exit scopes upon destruction, ensuring scopes always get cleaned up.

This means individual processes like Validation, profiling, or projecting don't need to implement their own scope stack (e.g., by passing around path variables), and get consistent handling of fields and field indices.

This allows simplifying the signatures of a lot of functions in validation and error reporting (e.g., by removing element/field path.

This CL is mostly a no-op, although some error messages change:
* Some Validation functions didn't keep track of index and so only showed field path (not element path).  These now report indices properly
* OperationOutcome messages no longer contain the location of error, since it is redundant with the location maintained by the error reporter.

E.g.,
                issue {
                  severity { value: ERROR }
                  code { value: VALUE }
                  diagnostics { value: "missing-Observation.status" }
                  expression { value: "Observation.status" }
                }
becomes
                issue {
                  severity { value: ERROR }
                  co

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -201,7 +201,6 @@ cc_library(
     deps = [
         ":annotations",
         ":error_reporter",
-        ":fhir_types",
         ":primitive_handler",
         ":proto_util",
         ":util",
@@ -481,7 +480,6 @@ cc_library(
         "//cc/google/fhir:error_reporter",
         "//cc/google/fhir/json:fhir_json",
         "//cc/google/fhir/status",
-        "//cc/google/fhir/status:statusor",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/time",
@@ -515,8 +513,22 @@ cc_library(
     hdrs = ["error_reporter.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        "@com_github_glog_glog//:glog",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
+        "@com_google_protobuf//:protobuf",
+    ],
+)
+
+cc_test(
+    name = "error_reporter_test",
+    srcs = ["error_reporter_test.cc"],
+    deps = [
+        ":error_reporter",
+        "//cc/google/fhir/status",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
     ],
 )
 
@@ -561,9 +573,8 @@ cc_library(
     hdrs = ["operation_error_reporter.h"],
     strip_include_prefix = "//cc/",
     deps = [
-        "//cc/google/fhir:error_reporter",
+        ":error_reporter",
         "//proto/google/fhir/proto/r4:fhirproto_cc_proto",
-        "//proto/google/fhir/proto/r4/core:codes_cc_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_cc_proto",
         "@com_google_absl//absl/status",
