Add support for NPM FHIR package format in Python.
PiperOrigin-RevId: 456521755

--- a/py/google/fhir/core/utils/BUILD
+++ b/py/google/fhir/core/utils/BUILD
@@ -243,6 +243,7 @@ py_test(
         ":proto_utils",
         "@com_google_protobuf//:protobuf_python",
         "//py",
+        "//proto/google/fhir/proto:annotations_py_pb2",
         "//proto/google/fhir/proto:profile_config_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         requirement("absl-py"),
