Allows entering ErrorScopes by field.  This automatically uses the JSON field name (to match the FHIR field), and drops the index of the field is not repeated (meaning the IndexOrNullopt function no longer needs to be called
PiperOrigin-RevId: 460814047

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -535,6 +535,7 @@ cc_test(
     deps = [
         ":error_reporter",
         "//cc/google/fhir/status",
+        "//proto/google/fhir/proto/r4/core/resources:patient_cc_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
