Prevent duplicate `PackageInfo`-s from being provided, apply `PackageInfo` validation evenly for both `load` methods and handle `SearchParameter`-s in `Bundle`-s.
PiperOrigin-RevId: 463120589

--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -92,18 +92,16 @@ java_test(
 
 java_test(
     name = "FhirPackageTest",
-    size = "medium",
     srcs = ["FhirPackageTest.java"],
-    data = [
-        "//spec:fhir_r4_package.zip",
-    ],
     test_class = "com.google.fhir.protogen.FhirPackageTest",
     deps = [
         "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/protogen",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:profile_config_java_proto",
+        "@maven//:com_google_guava_guava",
         "@maven//:com_google_guava_guava_testlib",
+        "@maven//:com_google_testparameterinjector_test_parameter_injector",
         "@maven//:com_google_truth_truth",
         "@maven//:junit_junit",
     ],
