Improve memory usage and performance when parsing large Binary resources
Summary of optimizations
- remove whitespace separator inplace
- base64 decode in place
- modify the json.RawMessage since this is already a copy of the input
- use a shallow copy when merging primitives with extensions. proto.Merge does a deep copy

Memory optimizations when using the streaming API

```
name                      old time/op    new time/op    delta
LargeBinary_Unmarshal-12     11.9s ±13%     10.7s ±12%     ~     (p=0.222 n=5+5)
                          old alloc/op   new alloc/op   delta
                            22.2GB ± 0%    17.2GB ± 0%  -22.55%  (p=0.008 n=5+5)
                          old allocs/op  new allocs/op  delta
                             8.64k ± 0%     8.63k ± 0%     ~     (p=0.119 n=5+5)
```

But the streaming API isn't very memory efficient, so here's what the numbers look like when using the it with the non-streaming function.

```
name                      old time/op    new time/op    delta
LargeBinary_Unmarshal-12     10.7s ±12%      4.2s ± 4%  -61.09%  (p=0.008 n=5+5)
                         old alloc/op   new alloc/op   delta
                            17.2GB ± 0%     2.9GB ± 0%  -83.35%  (p=0.008 n=5+5)
                         old allocs/op  new allocs/op  delta
                             8.63k ± 0%     8.51k ± 0%   -1.38%  (p=0.008 n=5+5)
```

BEGIN_PUBLIC
Improve memory usage and performance when parsing base64 binary data.
END_PUBLIC

PiperOrigin-RevId: 465332525

--- a/go/jsonformat/BUILD
+++ b/go/jsonformat/BUILD
@@ -23,6 +23,7 @@ go_library(
         "//go/jsonformat/fhirvalidate",
         "//go/jsonformat/internal/accessor",
         "//go/jsonformat/internal/jsonpbhelper",
+        "//go/jsonformat/internal/protopath",
         "//proto/google/fhir/proto:annotations_go_proto",
         "//proto/google/fhir/proto/r4:fhirproto_extensions_go_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_go_proto",
