Add test coverage to `addContainedResource` for the proto generator.
PiperOrigin-RevId: 465435494

--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -31,7 +31,7 @@ java_test(
 
 java_test(
     name = "ProtoGeneratorTest",
-    size = "medium",
+    size = "large",
     srcs = ["ProtoGeneratorTest.java"],
     data = [
         "//proto/google/fhir/proto/r4/core:testdata",
