remove stu3 deps
PiperOrigin-RevId: 467010629

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -391,12 +391,12 @@ cc_library(
         ":primitive_handler",
         ":profiles",
         "//cc/google/fhir:error_reporter",
+        "//cc/google/fhir:operation_error_reporter",
         "//cc/google/fhir:references",
         "//cc/google/fhir:resource_validation",
         "//cc/google/fhir:util",
         "//cc/google/fhir/fhir_path:r4_fhir_path_validation",
         "//cc/google/fhir/status:statusor",
-        "//cc/google/fhir/stu3:operation_error_reporter",
         "//proto/google/fhir/proto/r4:fhirproto_cc_proto",
         "//proto/google/fhir/proto/r4/core:codes_cc_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
