--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -51,9 +51,11 @@ java_test(
         "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:json_format",
         "//java/com/google/fhir/protogen",
+        "//java/com/google/fhir/protogen:generator_utils",
         "//java/com/google/fhir/protogen:proto_generator_test_utils",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:protogenerator_annotations_java_proto",
+        "//proto/google/fhir/proto/r4/core:codes_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
